--- a/.overrides/tools/templates/customsourcelink.html
+++ b/.overrides/tools/templates/customsourcelink.html
@@ -4,9 +4,15 @@
     <ul class="this-page-menu">
         <li><a href="{{ pathto('bugs') }}">{% trans %}Report a Bug{% endtrans %}</a></li>
         <li>
+            {% if sourcename.endswith('.rst') %}
+            <a href="https://github.com/python/python-docs-es/blob/{{ version }}/.overrides/{{ sourcename|replace('.rst.txt', '.rst') }}"
+               rel="nofollow">{{ _('Show Source') }}
+            </a>
+            {% else %}
             <a href="https://github.com/python/python-docs-es/blob/{{ version }}/{{ sourcename|replace('.rst.txt', '.po') }}"
                rel="nofollow">{{ _('Show Source') }}
             </a>
+            {% endif %}
         </li>
     </ul>
 </div>
