--- a/.overrides/tools/templates/customsourcelink.html
+++ b/.overrides/tools/templates/customsourcelink.html
@@ -5,6 +5,7 @@
         <li><a href="{{ pathto('bugs') }}">{% trans %}Report a Bug{% endtrans %}</a></li>
         <li>
             {% if sourcename.endswith('.rst') %}
+            {{sourcename}}
             <a href="https://github.com/python/python-docs-es/blob/{{ version }}/.overrides/{{ sourcename|replace('.rst.txt', '.rst') }}"
                rel="nofollow">{{ _('Show Source') }}
             </a>
