--- a/.overrides/tools/templates/customsourcelink.html
+++ b/.overrides/tools/templates/customsourcelink.html
@@ -8,7 +8,7 @@
                 Las siguientes líneas están para que se pueda redireccionar
                 al correctamente el código fuente en python-docs-es.readthedocs.io/
             #}
-            {% set overriden_pages = ['coc', 'CONTRIBUTING', 'faq', 'reviewers-guide','progress', 'README', 'translation-memory', 'upgrade-python-version'] %}
+            {% set overriden_pages = ['coc', 'CONTRIBUTING', 'faq', 'reviewers-guide','progress', 'translation-memory', 'upgrade-python-version'] %}
             {% if pagename in overriden_pages %}
                 <li>
                     <a href="https://github.com/python/python-docs-es/blob/{{ version }}/.overrides/{{ sourcename|replace('.rst.txt', '.rst') }}"
